--- a/cert-tools/conf.ini
+++ b/cert-tools/conf.ini
@@ -2,8 +2,8 @@
 issuer_url = https://www.utpl.edu.ec
 issuer_email = certificados@utpl.edu.ec
 issuer_name = Universidad Técnica Particular de Loja
-issuer_id = https://www.blockcerts.org/samples/2.0/issuer-testnet.json
-revocation_list=https://www.blockcerts.org/samples/2.0/revocation-list-testnet.json
+issuer_id = https://raw.githubusercontent.com/fovargas/blockcertsutpl/main/config/profile.json
+revocation_list=https://raw.githubusercontent.com/fovargas/blockcertsutpl/main/config/revocation-list.json
 issuer_public_key=ecdsa-koblitz-pubkey:msBCHdwaQ7N2ypBYupkp6uNxtr9Pg76imj
 issuer_logo_file = images/logo_utpl_2.png
 
