--- a/cert-tools/conf_v2.ini
+++ b/cert-tools/conf_v2.ini
@@ -2,10 +2,10 @@
 issuer_url = https://www.utpl.edu.ec
 issuer_email = certificados@utpl.edu.ec
 issuer_name = Universidad Técnica Particular de Loja
-issuer_id = https://raw.githubusercontent.com/jhdezctza/blockcerts/main/jhdezctza.json
-revocation_list=https://www.blockcerts.org/samples/2.0/revocation-list-testnet.json
-issuer_signature_lines={"fields": [{"job_title": "University Issuer","signature_image": "images/issuer-signature.png","name": "Your signature"}]}
-issuer_public_key=ecdsa-koblitz-pubkey:msBCHdwaQ7N2ypBYupkp6uNxtr9Pg76imj
+issuer_id = https://raw.githubusercontent.com/fovargas/blockcertsutpl/main/config/profile.json
+revocation_list=https://raw.githubusercontent.com/fovargas/blockcertsutpl/main/config/revocation-list.json
+issuer_signature_lines={"fields": [{"job_title": "Secretario General","signature_image": "images/issuer-signature.png","name": "Your signature"}]}
+issuer_public_key=ecdsa-koblitz-pubkey:mfxTL5kKdUHWpijtPPHSPghx34TZF8ufvr
 
 # certificate information
 certificate_description = Lorem ipsum dolor sit amet, mei docendi concludaturque ad, cu nec partem graece. Est aperiam consetetur cu, expetenda moderatius neglegentur ei nam, suas dolor laudem eam an.
@@ -39,7 +39,7 @@ no_clobber = True
 ## OTHER OPTIONSS ##
 ###################
 
-additional_global_fields = {"fields": [{"path": "$.nonce","value": "0"}]}
+additional_global_fields = { "fields": [ { "path": "$.credentialSubject", "value": { "id": "ecdsa-koblitz-pubkey:*|PUBKEY|*", "alumniOf": { "id": "https://www.utpl.edu.ec" } } }, { "path": "$.nonce", "value": "0" } ] }
 
 # whether to hash recipient emails, flag
 # hash_emails
