--- a/cert-tools/conf_v2.ini
+++ b/cert-tools/conf_v2.ini
@@ -39,7 +39,7 @@ no_clobber = True
 ## OTHER OPTIONSS ##
 ###################
 
-additional_global_fields = { "fields": [ { "path": "$.credentialSubject", "value": { "id": "ecdsa-koblitz-pubkey:*|PUBKEY|*", "alumniOf": { "id": "https://www.utpl.edu.ec" } } }, { "path": "$.nonce", "value": "0" } ] }
+additional_global_fields = { "fields": [{ "path": "$.credentialSubject", "value": { "id": "ecdsa-koblitz-pubkey:*|PUBKEY|*" } }, { "path": "$.nonce", "value": "0" } ] }
 
 # whether to hash recipient emails, flag
 # hash_emails
